--- a/index.html
+++ b/index.html
@@ -1062,12 +1062,7 @@ p {font-size: 108%}
 									<li style="margin-bottom: 5px;">Zewen Sun (PhD, starting Fall 2020)</li>
 									<li style="margin-bottom: 5px;">Xudong Sun (PhD, starting Fall 2021)</li>
 									
-									<br>								
-									<li style="margin-bottom: 5px;">Kai Ji (Master, starting Fall 2020)</li>
-									<li style="margin-bottom: 5px;">Wei Tao (Master, starting Fall 2020)</li>
-									<li style="margin-bottom: 5px;">Yuhui Deng (Master, starting Fall 2020)</li>
-									<li style="margin-bottom: 5px;">Yun Qi (Master, starting Fall 2020)</li>
-									
+									<br>															
 									<li style="margin-bottom: 5px;">Siyu Liu (Master, starting Fall 2021)</li>
 									<li style="margin-bottom: 5px;">Tianyi Liu (Master, starting Fall 2021)</li>
 
@@ -1087,6 +1082,10 @@ p {font-size: 108%}
 								<h3 style="color: darkblue">Graduated Students</h3>
 								<ul type="disc">
 
+									<li style="margin-bottom: 5px;">Kai Ji (Master, 2023)</li>
+									<li style="margin-bottom: 5px;">Wei Tao (Master, 2023)</li>
+									<li style="margin-bottom: 5px;">Yuhui Deng (Master, 2023)</li>
+									<li style="margin-bottom: 5px;">Yun Qi (Master, 2023)</li>
 									<li style="margin-bottom: 5px;">Guihang Wang (Master, 2022)</li>
 									<li style="margin-bottom: 5px;">Duanchen Xu (Master, 2022)</li>
 									<li style="margin-bottom: 5px;">Siyuan He (Master, 2022)</li>
@@ -1114,6 +1113,7 @@ p {font-size: 108%}
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">FSE'24 PC</li>
 									<li style="margin-bottom: 5px;">ASE'23 PC</li>
 									<li style="margin-bottom: 5px;">ChinaSys'23 PC</li>
 									<li style="margin-bottom: 5px;">ChinaSoft'23 PC</li>
