--- a/index.html
+++ b/index.html
@@ -1051,9 +1051,7 @@ p {font-size: 108%}
 <!--==================================== Students ====================================-->							
 							<div id="Students" class="tabcontent">
 								<p class="MsoNormal">
-									I'm co-advising many excellent students together with Prof. <a href="http://cs.nju.edu.cn/58/28/c2639a153640/page.htm">Xuandong Li</a>, 
-									Prof. <a href="https://cs.nju.edu.cn/58/03/c2639a153603/page.htm">Linzhang Wang</a> and 
-									other faculty in the <a href="http://seg.nju.edu.cn/index.action">Software Engineering Group</a>.  
+									I'm co-advising many excellent students together with the faculty in the <a href="http://seg.nju.edu.cn/index.action">Software Engineering Group</a>.  
 								</p>
 							
 								<h3 style="color: darkblue">Current Students</h3>
