--- a/index.html
+++ b/index.html
@@ -1154,6 +1154,9 @@ p {font-size: 108%}
 								<h3 style="color: darkblue">Lecturer</h3>
 								<ul type="disc">
 									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
+											Advanced Programming in C++ </em></strong> in Semester 1, 2023/2024
+									</li>
+									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
 											Advanced Programming in C++ </em></strong> in Semester 2, 2022/2023
 									</li>
 									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
