--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ p {font-size: 108%}
 										<br>
 										</li> 
 										
-									<li style="margin-bottom: 10px;"><strong>BigDataflow: A Distributed Inter-procedural Dataflow Analysis Framework</strong> 
+									<li style="margin-bottom: 10px;"><strong>BigDataflow: A Distributed Interprocedural Dataflow Analysis Framework</strong> 
 										<br> by <u>Zewen Sun</u>, <u>Duanchen Xu</u>, <u>Yiyu Zhang</u>, <u>Yun Qi</u>, <u>Yueyang Wang</u>, <strong>Zhiqiang Zuo</strong>*, Zhaokang Wang, Yue Li, Xuandong Li, Qingda Lu, Wenwen Peng, and Shengjian Guo. 
 										<br> accepted by <i>the ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering</i>, 
 										<a href="https://2023.esec-fse.org/">(<font color="#ff0000"><strong>FSE'23</strong></font>)</a>, 2023. 
