--- a/index.html
+++ b/index.html
@@ -260,6 +260,12 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2023.8] Invited to serve on the program committee (PC) of the ACM SIGPLAN International Conference on Compiler Construction <a href="https://conf.researchr.org/home/CC-2024" style="text-decoration: none;">(CC'24)</a>.</font></i>
+									</li>
+									
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2023.7] BigDataflow was accepted to <a href="https://2023.esec-fse.org/" style="text-decoration: none;">FSE'23</a>. Congrats to Zewen, Duanchen, Yiyu, Qiyun, and Yueyang!</font></i>
 									</li>
 
@@ -1160,6 +1166,7 @@ p {font-size: 108%}
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">CC'24 PC</li>
 									<li style="margin-bottom: 5px;">FSE'24 PC</li>
 									<li style="margin-bottom: 5px;">ASE'23 PC</li>
 									<li style="margin-bottom: 5px;">ChinaSys'23 PC</li>
