--- a/index.html
+++ b/index.html
@@ -260,6 +260,12 @@ p {font-size: 108%}
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2023.9] Invited to serve on the program committee (PC) of the 45th ACM SIGPLAN Conference on Programming Language Design and Implementation <a href="https://pldi24.sigplan.org/" style="text-decoration: none;">(PLDI'24)</a>.</font></i>
+									</li>
+
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2023.8] Invited to serve on the program committee (PC) of the ACM SIGPLAN International Conference on Compiler Construction <a href="https://conf.researchr.org/home/CC-2024" style="text-decoration: none;">(CC'24)</a>.</font></i>
 									</li>
 									
@@ -1166,6 +1172,7 @@ p {font-size: 108%}
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">PLDI'24 PC</li>
 									<li style="margin-bottom: 5px;">CC'24 PC</li>
 									<li style="margin-bottom: 5px;">FSE'24 PC</li>
 									<li style="margin-bottom: 5px;">ASE'23 PC</li>
