--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ div.scroll {
 
 h1 {font-size: 220%}
 h2 {font-size: 180%}
+h7 {font-size: 140%}
 h3 {font-size: 120%}
 p {font-size: 108%}
 
@@ -219,6 +220,19 @@ p {font-size: 108%}
 								</a>
 								</p>
 								-->
+<p class="MsoNormal">
+I am serving the PC for the following conferences. Please consider submitting your work to them. 
+</p>
+<table>
+  <tr>
+    <th>&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+    <th><h7><a href="https://conf.researchr.org/home/fse-2024"><font color="black"><u>FSE'24</u></font></a></h7></th>
+    <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+    <th><h7><a href="https://conf.researchr.org/home/CC-2024"><font color="black"><u>CC'24</u></font></a></h7></th>
+    <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+    <th><h7><a href="https://pldi24.sigplan.org/"><font color="black"><u>PLDI'24</u></font></a></h7></th>
+  </tr>
+</table>
 		
 
 <!------------------------ interests ---------------------------->	
