--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ p {font-size: 108%}
 								</p>
 								
 								<p><strong>
-								中文简介：左志强，新体制长聘副教授（特聘研究员），博士生导师。2015年于新加坡国立大学获博士学位。2015年至2017年于美国加州大学从事博士后工作。主要研究方向为系统软件、编译器、程序分析等。
+								中文简介：左志强，新体制长聘副教授（特聘研究员），博士生导师。新加坡国立大学博士，美国加州大学博士后。主要研究方向为系统软件、编译器、程序分析等。
 								</strong></p>
 
 								
