--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 							
 								<p class="MsoNormal">
 									My research interests span Programming Languages, Software Engineering, and Systems. 
-									<i><strong>I have been recently focusing on building and customizing systems software (e.g., compilers, runtime environments, Big Data and operating systems) for program efficiency, reliability, and safety.</strong></i> 
+									<i><strong>I have been recently focusing on building and customizing systems software (e.g., compilers, runtime environments, and operating systems) for program efficiency, reliability, and safety.</strong></i> 
 											
 								<!-- 
 								I am recently focusing on building Big Data supports for scalable program analysis, synthesis and SAT solving. 
