--- a/index.html
+++ b/index.html
@@ -1251,6 +1251,9 @@ I am serving the PC for the following conferences. Please consider submitting yo
 								<h3 style="color: darkblue">Lecturer</h3>
 								<ul type="disc">
 									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
+											Advanced Programming in C++ </em></strong> in Semester 2, 2023/2024
+									</li>
+									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
 											Advanced Programming in C++ </em></strong> in Semester 1, 2023/2024
 									</li>
 									<li style="margin-bottom: 5px;">NJU 22010100:<strong><em>
