--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@ I am serving the PC for the following conferences. Please consider submitting yo
     <th><h7><a href="https://conf.researchr.org/home/CC-2024"><font color="black"><u>CC'24</u></font></a></h7></th>
     <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
     <th><h7><a href="https://pldi24.sigplan.org/"><font color="black"><u>PLDI'24</u></font></a></h7></th>
+    <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+    <th><h7><a href="https://2024.splashcon.org/track/splash-2024-oopsla#Call-for-Papers"><font color="black"><u>OOPSLA'24</u></font></a></h7></th>
   </tr>
 </table>
 		
@@ -274,6 +276,12 @@ I am serving the PC for the following conferences. Please consider submitting yo
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2024.2] Invited to serve on the review committee (RC) of the ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications <a href="https://2024.splashcon.org/track/splash-2024-oopsla#Call-for-Papers" style="text-decoration: none;">(OOPSLA'24)</a>.</font></i>
+									</li>
+
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
 										<i><font color="black">[2023.9] Invited to serve on the program committee (PC) of the 45th ACM SIGPLAN Conference on Programming Language Design and Implementation <a href="https://pldi24.sigplan.org/" style="text-decoration: none;">(PLDI'24)</a>.</font></i>
 									</li>
 
@@ -314,13 +322,13 @@ I am serving the PC for the following conferences. Please consider submitting yo
 												
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										&bull;	
 										<i><font color="black">[2022.12] DStream was accepted to <a href="https://conf.researchr.org/home/icse-2023" style="text-decoration: none;">ICSE'23</a>. Congrats to Xizao!</font></i>
 									</li>
 									
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										&bull;
 										<i><font color="black">[2022] Promoted as tenured associate professor (tenure-track) at NJU.</font></i>
 									</li>
 									<li class="MsoNormal"
@@ -1202,6 +1210,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">OOPSLA'24 RC</li>
 									<li style="margin-bottom: 5px;">ICSE'24 SRC PC</li>
 									<li style="margin-bottom: 5px;">PLDI'24 PC</li>
 									<li style="margin-bottom: 5px;">CC'24 PC</li>
