--- a/index.html
+++ b/index.html
@@ -873,7 +873,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 										
 										<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										PI, Alibaba Innovation Research (AIR) Award, 2021.1-2021.12, (分布式系统的软件错误的相关理论和检测分析)</li>
+										PI, Alibaba Innovation Research (AIR) Award, 2021.1-2021.12, (分布式系统的软件错误的相关理论和检测分析工具)</li>
 										
 										<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
