--- a/index.html
+++ b/index.html
@@ -225,14 +225,12 @@ I am serving the PC for the following conferences. Please consider submitting yo
 </p>
 <table>
   <tr>
-    <th>&nbsp&nbsp&nbsp&nbsp&nbsp</th>
-    <th><h7><a href="https://conf.researchr.org/home/fse-2024"><font color="black"><u>FSE'24</u></font></a></h7></th>
-    <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
-    <th><h7><a href="https://conf.researchr.org/home/CC-2024"><font color="black"><u>CC'24</u></font></a></h7></th>
     <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
     <th><h7><a href="https://pldi24.sigplan.org/"><font color="black"><u>PLDI'24</u></font></a></h7></th>
     <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
     <th><h7><a href="https://2024.splashcon.org/track/splash-2024-oopsla#Call-for-Papers"><font color="black"><u>OOPSLA'24</u></font></a></h7></th>
+    <th>&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+    <th><h7><a href="https://conf.researchr.org/track/fse-2025/fse-2025-papers"><font color="black"><u>FSE'25</u></font></a></h7></th>
   </tr>
 </table>
 		
@@ -273,6 +271,12 @@ I am serving the PC for the following conferences. Please consider submitting yo
 								
 								<ul type="disc">
 								<div class="scroll">
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2024.4] Invited to serve on the program committee (PC) of the ACM International Conference on the Foundations of Software Engineering <a href="https://conf.researchr.org/track/fse-2025/fse-2025-papers" style="text-decoration: none;">(FSE'25)</a>.</font></i>
+									</li>	
+
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
@@ -1170,6 +1174,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 									<li style="margin-bottom: 5px;">Kaiyu Wang (Master, starting Fall 2024)</li>
 									<li style="margin-bottom: 5px;">Jingyang Shi (Master, starting Fall 2024)</li>
 									<li style="margin-bottom: 5px;">Kangxu Wei (Master, starting Fall 2024)</li>
+									<li style="margin-bottom: 5px;">Xinjie Deng (Master, starting Fall 2024)</li>
 									<br>
 									
 
@@ -1210,6 +1215,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">FSE'25 PC</li>
 									<li style="margin-bottom: 5px;">OOPSLA'24 RC</li>
 									<li style="margin-bottom: 5px;">ICSE'24 SRC PC</li>
 									<li style="margin-bottom: 5px;">PLDI'24 PC</li>
