--- a/index.html
+++ b/index.html
@@ -119,9 +119,8 @@ p {font-size: 108%}
 											<p class="MsoNormal">
 												Associate Professor (with tenure) <br>
 												Co-Appointed Research Professor <br>
-												<!--	Advisor: <a href="http://www.ics.uci.edu/~guoqingx/">Harry Xu</a> -->
 												<!--<a href="http://seg.nju.edu.cn/index.action">Software Engineering Group</a> <br> -->
-												<a href="http://cs.nju.edu.cn/">Department of Computer Science and Technology</a>
+												<a href="http://cs.nju.edu.cn/">School of Computer Science and Technology</a>
 												<br> 
 												<a href="https://www.nju.edu.cn/">Nanjing University, China</a><br>
 											</p>
@@ -187,7 +186,7 @@ p {font-size: 108%}
 <!------------------------ me ---------------------------->
 								<h3 style="color: darkblue">About Me</h3>
 								<p class="MsoNormal">
-									I am now an associate professor in the Department of Computer Science & Technology, Nanjing University, China.
+									I am now an associate professor in the School of Computer Science & Technology, Nanjing University, China.
 									Before joining NJU, I got my PhD from National University of Singapore in 2015, and worked as a postdoc scholar at University of California, Irvine from 2015 to 2017.
 								<!--I was a postdoctoral scholar working with <a href="http://web.cs.ucla.edu/~harryxu/" style="text-decoration: none;">Dr. Harry Xu</a> at University of California. 
 								, under the supervision of <a href="https://www.comp.nus.edu.sg/~khoosc/" style="text-decoration: none;">Dr. Siau-Cheng Khoo</a>. -->
