--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 									
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										&bull;	
 										<i><font color="black">[2023.7] BigDataflow was accepted to <a href="https://2023.esec-fse.org/" style="text-decoration: none;">FSE'23</a>. Congrats to Zewen, Duanchen, Yiyu, Qiyun, and Yueyang!</font></i>
 									</li>
 
