--- a/index.html
+++ b/index.html
@@ -200,8 +200,9 @@ p {font-size: 108%}
 								
 								<p class="MsoNormal">
 								<i><font color="red"><strong>I am recruiting PhD, Master and Undergraduate students. If interested, please feel free to drop me an email.
-								<br />现招收博士、硕士以及南京大学本科生，对AI编译、编译优化、编译器及运行时设计等感兴趣的同学，请通过邮件（附简历和成绩单）取得联系。</strong></font></i>
+								<br />现招收博士、硕士以及南京大学本科生，对AI编译优化、编译器及运行时设计与实现等感兴趣的同学，请阅读<h7><a href="招生说明.pdf" target="_blank"><u>招生信息</u></a></h7>。</strong></font></i>
 								</p>
+
 								
 								<!--
 								<p class="MsoNormal">
@@ -228,7 +229,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
     <th>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
     <th><h7><a href="https://pldi25.sigplan.org/"><font color="black"><u>PLDI'25</u></font></a></h7></th>
     <th>&nbsp&nbsp&nbsp&nbsp&nbsp</th>
-    <th><h7><a href=""><font color="black"><u>ASPLOS'26</u></font></a></h7></th>
+    <th><h7><a href="https://www.asplos-conference.org/asplos2026/"><font color="black"><u>ASPLOS'26</u></font></a></h7></th>
   
   </tr>
 </table>
