--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ p {font-size: 108%}
 								
 								<p class="MsoNormal">
 								<i><font color="red"><strong>I am recruiting PhD, Master and Undergraduate students. If interested, please feel free to drop me an email.
-								<br />现招收博士、硕士以及南京大学本科生，对AI编译优化、编译器及运行时设计与实现等感兴趣的同学，请阅读<h7><a href="招生说明.pdf" target="_blank"><u>招生信息</u></a></h7>。</strong></font></i>
+								<br />现招收博士、硕士以及南京大学本科生，对AI编译优化、编译器及运行时设计与实现等感兴趣的同学，请阅读<h7><a href="招生说明.pdf" target="_blank"><u>招生信息</u></a></h7></strong></font></i>
 								</p>
 
 								
