--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@ I am serving the PC for the following conferences. Please consider submitting yo
 								
 								<ul type="disc">
 								<div class="scroll">
+									
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2025.7] Invited to serve on the program committee (PC) of the ACM International Conference on the Foundations of Software Engineering <a href="https://conf.researchr.org/home/fse-2026" style="text-decoration: none;">(FSE'26)</a>.</font></i>
+									</li>	
+
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
@@ -1301,6 +1308,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 							<div id="Services" class="tabcontent">
 								<h3 style="color: darkblue">Conference Committee</h3>
 								<ul type="disc">
+									<li style="margin-bottom: 5px;">FSE'26 PC</li>
 									<li style="margin-bottom: 5px;">ASPLOS'26 PC</li>
 									<li style="margin-bottom: 5px;">PLDI'25 PC</li>
 									<li style="margin-bottom: 5px;">ICSE'25 Workshop PC</li>
