--- a/index.html
+++ b/index.html
@@ -275,15 +275,15 @@ I am serving the PC for the following conferences. Please consider submitting yo
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
-										<i><font color="black">[2025.7] Invited to serve on the program committee (PC) of the ACM International Conference on the Foundations of Software Engineering <a href="https://conf.researchr.org/home/fse-2026" style="text-decoration: none;">(FSE'26)</a>.</font></i>
-									</li>	
+										<i><font color="black">[2025.8] Both HybridPersist and TailTracer were accepted to <a href="https://2025.splashcon.org/track/OOPSLA" style="text-decoration: none;">OOPSLA'25</a>. Congrats to Yiyu, Tianyi, Yongzhi, Yi Li, and Yanfeng!</font></i>
+									</li>
 
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
-										<i><font color="black">[2025.6] HybridPersist was conditionally accepted to <a href="https://2025.splashcon.org/track/OOPSLA" style="text-decoration: none;">OOPSLA'25</a>. Congrats to Yiyu, Yongzhi, and Yanfeng!</font></i>
-									</li>
-								
+										<i><font color="black">[2025.7] Invited to serve on the program committee (PC) of the ACM International Conference on the Foundations of Software Engineering <a href="https://conf.researchr.org/home/fse-2026" style="text-decoration: none;">(FSE'26)</a>.</font></i>
+									</li>	
+												
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
 										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
@@ -617,14 +617,14 @@ I am serving the PC for the following conferences. Please consider submitting yo
 
 									<li style="margin-bottom: 10px;"><strong>HybridPersist: A Compiler Support for User-Friendly and Efficient PM Programming</strong> 
 										<br> by <u>Yiyu Zhang</u>, <u>Yongzhi Wang</u>, <u>Yanfeng Gao</u>, Xuandong Li, and <strong>Zhiqiang Zuo</strong>*. 
-										<br> conditionally accepted by <i>the ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications</i>, 
+										<br>  In <i>Proceedings of the ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications</i>, 
 										<a href="https://2025.splashcon.org/track/OOPSLA">(<font color="#ff0000"><strong>OOPSLA'25</strong></font>)</a>, 2025. 
 										<br>
 										</li>
 
 									<li style="margin-bottom: 10px;"><strong>TailTracer: Continuous Tail Tracing for Production Use</strong> 
 										<br> by <u>Tianyi Liu</u>, <u>Yi Li</u>, <u>Yiyu Zhang</u>, Zhuangda Wang, Rongxin Wu, Xuandong Li, and <strong>Zhiqiang Zuo</strong>*. 
-										<br> under revision by <i>the ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications</i>, 
+										<br>  In <i>Proceedings of the ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications</i>, 
 										<a href="https://2025.splashcon.org/track/OOPSLA">(<font color="#ff0000"><strong>OOPSLA'25</strong></font>)</a>, 2025. 
 										<br>
 										</li>
@@ -635,7 +635,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 
 									<li style="margin-bottom: 10px;"><strong>HardTaint: Production-Run Dynamic Taint Analysis via Selective Hardware Tracing</strong> 
 										<br> by <u>Yiyu Zhang</u>, <u>Tiany&#237; Liu</u>, <u>Yueyang Wang</u>, <u>Yun Qi</u>, <u>Kai Ji</u>, Jian Tang, Xiaoliang Wang, Xuandong Li, and <strong>Zhiqiang Zuo</strong>*. 
-										<br> accepted by <i>the ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications</i>, 
+										<br>  In <i>Proceedings of the ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications</i>, 
 										<a href="https://2024.splashcon.org/track/splash-2024-oopsla">(<font color="#ff0000"><strong>OOPSLA'24</strong></font>)</a>, 2024. 
 										<br>
 										</li>
