--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 								<h4 style="color: darkblue">Preprint</h4>
 
 									<li style="margin-bottom: 10px;"><strong>Scaling Inter-procedural Dataflow Analysis on the Cloud</strong> 
-										<br> by <u>Zewen Sun<sup>#</sup></u>, <u>Yujin Zhang<sup>#</sup></u>, <u>Duanchen Xu</u>, <u>Yiyu Zhang</u>, <u>Yun Qi</u>, <u>Yueyang Wang</u>, <u>Yi Li</u>, Zhaokang Wang, Yue Li, Xuandong Li, <strong>Zhiqiang Zuo</strong>*, Qingda Lu, Wenwen Peng, and Shengjian Guo. 
+										<br> by <u>Zewen Sun</u>, <u>Yujin Zhang</u>, <u>Yueyang Wang</u>, <u>Duanchen Xu</u>, <u>Yiyu Zhang</u>, <u>Yun Qi</u>, Zhaokang Wang, Yue Li, Xuandong Li, <strong>Zhiqiang Zuo</strong>*, Qingda Lu, Wenwen Peng, and Shengjian Guo. 
 										<a href="https://arxiv.org/abs/2412.12579">arXiv</a>. 
 										<br>
 										</li>
@@ -929,6 +929,14 @@ I am serving the PC for the following conferences. Please consider submitting yo
 							<div id="Research" class="tabcontent">
 								<h3 style="color: darkblue">Grants &amp; Awards</h3>
 								<ul type="disc">
+
+										<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										PI, Huawei Innovation Research Project, 2025.9-2026.9, (图融合Pass问题定位技术合作项目)</li>
+
+										<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										PI, Natural Science Foundation of Jiangsu Province [Distinguished Young Scholar Program], 2025.7-2028.6, (面向工业场景的智能化软件程序分析理论与方法)</li>
 
 										<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
