--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 										</li>
 
 									<li style="margin-bottom: 10px;"><strong>HardRace: A Dynamic Data Race Monitor for Production Use</strong> 
-										<br> by <u>Xudong Sun</u>, <u>Zhuo Chen</u>, <u>Jingyang Shi</u>, <u>Yiyu Zhang</u>, Peng Di, Jianhua Zhao, Xuandong Li, and <strong>Zhiqiang Zuo</strong>*. 
+										<br> by <u>Xudong Sun</u>, <u>Zhuo Chen</u>, <u>Jingyang Shi</u>, <u>Yiyu Zhang</u>, Peng Di, Jianhua Zhao, and <strong>Zhiqiang Zuo</strong>*. 
 										<a href="https://arxiv.org/abs/2410.18412">arXiv</a>. 
 										<br>
 										</li>
@@ -1362,6 +1362,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 								<ul type="disc">
 									<li style="margin-bottom: 5px;">ACM TOSEM</li>
 									<li style="margin-bottom: 5px;">IEEE TSE</li>
+									<li style="margin-bottom: 5px;">IEEE TC</li>
 									<li style="margin-bottom: 5px;">JCST</li>
 									<li style="margin-bottom: 5px;">JOC</li>
 									<li style="margin-bottom: 5px;">JOS</li>
