--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ p {font-size: 108%}
 												Associate Professor (with tenure) <br>
 												Co-Appointed Research Professor <br>
 												<!--<a href="http://seg.nju.edu.cn/index.action">Software Engineering Group</a> <br> -->
-												<a href="http://cs.nju.edu.cn/">School of Computer Science and Technology</a>
+												<a href="http://cs.nju.edu.cn/">School of Computer Science</a>
 												<br> 
 												<a href="https://www.nju.edu.cn/">Nanjing University, China</a><br>
 											</p>
