--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ p {font-size: 108%}
 								<h3 style="color: darkblue">About Me</h3>
 								<p class="MsoNormal">
 									I am now an associate professor in the School of Computer Science & Technology, Nanjing University, China.
-									Before joining NJU, I got my PhD from National University of Singapore in 2015, and worked as a postdoc scholar at University of California, Irvine from 2015 to 2017.
+									Before joining NJU, I got my PhD from National University of Singapore, and worked as a postdoc scholar at University of California, Irvine.
 								<!--I was a postdoctoral scholar working with <a href="http://web.cs.ucla.edu/~harryxu/" style="text-decoration: none;">Dr. Harry Xu</a> at University of California. 
 								, under the supervision of <a href="https://www.comp.nus.edu.sg/~khoosc/" style="text-decoration: none;">Dr. Siau-Cheng Khoo</a>. -->
 								<!--	Here is my brief <a href="https://drive.google.com/file/d/1FtSX5MjQpKtkzDRCvZafUeKd7xfEwOtf/view?usp=sharing" style="text-decoration: underline">CV</a>. -->
