--- a/index.html
+++ b/index.html
@@ -271,6 +271,12 @@ I am serving the PC for the following conferences. Please consider submitting yo
 								
 								<ul type="disc">
 								<div class="scroll">
+
+									<li class="MsoNormal"
+										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
+										&bull;	<img src="new_zuo.png" height="20" style="vertical-align:top">
+										<i><font color="black">[2025.12] Our journal paper on incremental distributed dataflow analysis was accepted to <a href="https://dl.acm.org/journal/toplas" style="text-decoration: none;">TOPLAS</a>. Congrats to Zewen, Yujin, Yueyang, Duanchen, Yiyu, and Qiyun!</font></i>
+									</li>
 									
 									<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
@@ -601,12 +607,6 @@ I am serving the PC for the following conferences. Please consider submitting yo
 
 								<h4 style="color: darkblue">Preprint</h4>
 
-									<li style="margin-bottom: 10px;"><strong>Scaling Inter-procedural Dataflow Analysis on the Cloud</strong> 
-										<br> by <u>Zewen Sun</u>, <u>Yujin Zhang</u>, <u>Yueyang Wang</u>, <u>Duanchen Xu</u>, <u>Yiyu Zhang</u>, <u>Yun Qi</u>, Zhaokang Wang, Yue Li, Xuandong Li, <strong>Zhiqiang Zuo</strong>*, Qingda Lu, Wenwen Peng, and Shengjian Guo. 
-										<a href="https://arxiv.org/abs/2412.12579">arXiv</a>. 
-										<br>
-										</li>
-
 									<li style="margin-bottom: 10px;"><strong>HardRace: A Dynamic Data Race Monitor for Production Use</strong> 
 										<br> by <u>Xudong Sun</u>, <u>Zhuo Chen</u>, <u>Jingyang Shi</u>, <u>Yiyu Zhang</u>, Peng Di, Jianhua Zhao, and <strong>Zhiqiang Zuo</strong>*. 
 										<a href="https://arxiv.org/abs/2410.18412">arXiv</a>. 
@@ -614,6 +614,13 @@ I am serving the PC for the following conferences. Please consider submitting yo
 										</li>
 
 								<h4 style="color: darkblue">2025</h4>
+
+									<li style="margin-bottom: 10px;"><strong>Scaling Inter-procedural Dataflow Analysis on the Cloud</strong> 
+										<br> by <u>Zewen Sun</u>, <u>Yujin Zhang</u>, <u>Yueyang Wang</u>, <u>Duanchen Xu</u>, <u>Yiyu Zhang</u>, <u>Yun Qi</u>, Zhaokang Wang, Yue Li, Xuandong Li, Qingda Lu, Wenwen Peng, Shengjian Guo, and <strong>Zhiqiang Zuo</strong>*. 
+										<br>  accepted by <i>ACM Transactions on Programming Languages and Systems</i>, 
+										<a href="https://dl.acm.org/journal/toplas">(<font color="#ff0000"><strong>TOPLAS'25</strong></font>)</a>, 2025. 
+										<br>(This is an extended journal version of our FSE'23 paper by adding incremental analysis support.)
+										</li>
 
 									<li style="margin-bottom: 10px;"><strong>HybridPersist: A Compiler Support for User-Friendly and Efficient PM Programming</strong> 
 										<br> by <u>Yiyu Zhang</u>, <u>Yongzhi Wang</u>, <u>Yanfeng Gao</u>, Xuandong Li, and <strong>Zhiqiang Zuo</strong>*. 
