--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ I am serving the PC for the following conferences. Please consider submitting yo
 								
 										<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
-										ChinaSoft Distinguished Young Scientists, 2025</li>
+										ChinaSoft Distinguished Young Scientists (NASAC青年软件创新奖), 2025</li>
 
 										<li class="MsoNormal"
 										style="mso-margin-top-alt: auto; mso-margin-bottom-alt: auto; mso-list: l3 level1 lfo6; tab-stops: list .5in">
